[tool.black]
line-length = 120
required-version = "24.3.0"

[tool.isort]
profile = "black"
line_length = 120
combine_as_imports = true
combine_star = true
known_local_folder = ["tests", "cli"]
known_first_party = ["test_utils"]

[tool.poetry]
name = "cillium-miner"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.3.0"
torchvision = "^0.18.0"
torchaudio = "^2.3.0"
accelerate = "^0.29.3"
dataset = "^1.6.2"
transformers = "^4.40.1"
diffusers = "^0.27.2"
safetensors = "^0.4.3"
sentencepiece = "^0.2.0"
huggingface-hub = "^0.22.2"
bitsandbytes = "^0.43.1"
hivemind = "^1.1.10.post2"
speedtest-cli = "^2.1.3"
peft = "^0.10.0"
humanfriendly = "^10.0"
tensor-parallel = "^2.0.0"
tokenizer = "^3.4.3"
dijkstar = "^2.6.0"
packaging = "^24.0"
async-timeout = "^4.0.3"
pydantic-core = "^2.18.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-forked = "^1.6.0"
pytest-asyncio = "^0.23.6"
black = "^24.4.2"
isort = "^5.13.2"
psutil = "^5.9.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
setuptools = ">=40.8.0"
wheel = ">=0.33.6"
